// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Website</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        const l = params.get("lang") || "en" || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"موقع الويب"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/src/counter.ts 1`] = `
"import { _t } from "zintl/internal";
import _zintl_mgr_b_src_main_render from "virtual:zintl/manager/none/entry:b_src_main_render";


export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    // @zintl-note This is a note for the compiler
    element.innerHTML = _t("{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}", { counter }, { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_counter_setupCounter" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_src_main_render from "virtual:zintl/manager/none/entry:b_src_main_render";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";

import { setupCounter } from "./counter";

// export function setupCounter(element: HTMLButtonElement) {
//   let counter = 0;
//   const setCounter = (count: number) => {
//     counter = count;
//     element.innerHTML = t(
//       "{counter, plural, zero {Start Counting Now!} one {Count is One.} two {Count is Two} other {Count is #}}",
//       { counter },
//     );
//   };
//   element.addEventListener("click", () => setCounter(counter + 1));
//   setCounter(0);
// }

async function render() {
  const params = new URLSearchParams(window.location.search);

  // zintlizing to search params lang, default to "en", hence no baking allowed for this flow.
  await loadI18nInstance({ locale: params.get("lang") || "en", loaders: { ["b_src_main_render"]: _zintl_mgr_b_src_main_render.loader } });

  const app = document.querySelector<HTMLDivElement>("#app")!;
  app.innerHTML = \`
    <div>
      <a href="https://vite.dev" target="_blank">
        <img src="\${viteLogo}" class="logo" alt="Vite logo" />
      </a>
      <a href="https://www.typescriptlang.org/" target="_blank">
        <img src="\${typescriptLogo}" class="logo vanilla" alt="TypeScript logo" />
      </a>
      <div class="hero-container">
        <img src="\${heroImg}" class="hero-image" alt="Zintl Hero" />
        <!-- @zintl-note This is a note for the compiler -->
        <h1 class="hero-title">\${_t("Zintl I18n", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</h1>
        <p class="hero-subtitle">\${_t("Compiler-driven internationalization for the modern web.", { _mgr: _zintl_mgr_b_src_main_render, _bId: "b_src_main_render" })}</p>
      </div>

      <div class="card">
        <button id="counter" type="button"></button>
      </div>

      <div class="language-switcher">
        <!-- @zintl-ignore -->
        <button id="set-ar">العربية</button>
        <!-- @zintl-ignore -->
        <button id="set-en">English</button>
        <!-- @zintl-ignore -->
        <button id="set-es">Español</button>
      </div>

    </div>
  \`;

  setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);

  // 2. Logic to toggle language using the unified API
  document.querySelector("#set-en")?.addEventListener("click", async () => {
    history.pushState({}, "", "?lang=en");
    await render();
  });
  document.querySelector("#set-ar")?.addEventListener("click", async () => {
    window.history.pushState({}, "", \`?lang=ar\`);
    await render();
  });
  document.querySelector("#set-es")?.addEventListener("click", async () => {
    window.history.pushState({}, "", \`?lang=es\`);
    await render();
  });
}

// Initial render
await render();"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/content/ar/entry:b_src_main_render 1`] = `
"export default {
    "b_src_main_render": {
      "Zintl I18n": "تدويل زينتل",
      "Compiler-driven internationalization for the modern web.": "التدويل الموجه بالمعالجة للويب الحديث.",
    },
    "b_src_counter_setupCounter": {
      "{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}": (params) => {
    const { counter } = params;
    return \`\${(() => {
      const rule = new Intl.PluralRules('ar').select(params['counter']);
      if (rule === 'zero') return \`ابدا العد الان\`;
      if (rule === 'one') return \`العد وصل لواحد\`;
      if (rule === 'two') return \`العد وصل لاثنان\`;
      return \`العد وصل لـ \${params['counter']}\`;
    })()}\`;
  },
    },
  };"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/content/es/entry:b_src_main_render 1`] = `
"export default {
    "b_src_main_render": {
      "Zintl I18n": "¡Zintl I18n",
      "Compiler-driven internationalization for the modern web.": "La internacionalización impulsada por el compilador para la web moderna.",
    },
    "b_src_counter_setupCounter": {
      "{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}": (params) => {
    const { counter } = params;
    return \`\${(() => {
      if (params['counter'] == 0) return \`Empieza a contar ahora!\`;
      const rule = new Intl.PluralRules('es').select(params['counter']);
      if (rule === 'one') return \`El contador es uno.\`;
      if (rule === 'two') return \`El contador es dos.\`;
      return \`El contador es \${params['counter']}\`;
    })()}\`;
  },
    },
  };"
`;

exports[`Example Proof: website > should match Development snapshots (Identity keys) > website/dev-transforms/virtual:zintl/manager/none/entry:b_src_main_render 1`] = `
"export default { id: "b_src_main_render", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_main_render": {
      "Zintl I18n": "Zintl I18n",
      "Compiler-driven internationalization for the modern web.": "Compiler-driven internationalization for the modern web.",
    },
    "b_src_counter_setupCounter": {
      "{counter, plural, =0 {Start Counting Now!} one {Count is One.} =2 {Count is Two} other {Count is #}}": (params) => {
    const { counter } = params;
    return \`\${(() => {
      if (params['counter'] == 0) return \`Start Counting Now!\`;
      if (params['counter'] == 2) return \`Count is Two\`;
      const rule = new Intl.PluralRules('en').select(params['counter']);
      if (rule === 'one') return \`Count is One.\`;
      return \`Count is \${params['counter']}\`;
    })()}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_src_main_render").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_src_main_render").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: website > should match Final Production Build (dist) snapshots > website/dist/assets/entry_b_ae1e7cbb2f74-BNWsTriX.js 1`] = `
"//#region \\0virtual:zintl/content/ar/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	"b_ae1e7cbb2f74": {
		"90929241": "التدويل الموجه بالمعالجة للويب الحديث.",
		"072b66c8": "تدويل زينتل"
	},
	"b_f05b8e5701f3": { "ba23519a": (params) => {
		const { counter } = params;
		return \`\${(() => {
			const rule = new Intl.PluralRules("ar").select(params["counter"]);
			if (rule === "zero") return \`ابدا العد الان\`;
			if (rule === "one") return \`العد وصل لواحد\`;
			if (rule === "two") return \`العد وصل لاثنان\`;
			return \`العد وصل لـ \${params["counter"]}\`;
		})()}\`;
	} }
};
//#endregion
export { entry_b_ae1e7cbb2f74_default as default };
"
`;

exports[`Example Proof: website > should match Final Production Build (dist) snapshots > website/dist/assets/entry_b_ae1e7cbb2f74-gfFkWwHV.js 1`] = `
"//#region \\0virtual:zintl/content/es/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	"b_ae1e7cbb2f74": {
		"90929241": "La internacionalización impulsada por el compilador para la web moderna.",
		"072b66c8": "¡Zintl I18n"
	},
	"b_f05b8e5701f3": { "ba23519a": (params) => {
		const { counter } = params;
		return \`\${(() => {
			if (params["counter"] == 0) return \`Empieza a contar ahora!\`;
			const rule = new Intl.PluralRules("es").select(params["counter"]);
			if (rule === "one") return \`El contador es uno.\`;
			if (rule === "two") return \`El contador es dos.\`;
			return \`El contador es \${params["counter"]}\`;
		})()}\`;
	} }
};
//#endregion
export { entry_b_ae1e7cbb2f74_default as default };
"
`;

exports[`Example Proof: website > should match Final Production Build (dist) snapshots > website/dist/assets/index-cP7leHyS.js 1`] = `
"//#region \\0vite/modulepreload-polyfill.js
(function polyfill() {
	const relList = document.createElement("link").relList;
	if (relList && relList.supports && relList.supports("modulepreload")) return;
	for (const link of document.querySelectorAll("link[rel=\\"modulepreload\\"]")) processPreload(link);
	new MutationObserver((mutations) => {
		for (const mutation of mutations) {
			if (mutation.type !== "childList") continue;
			for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
		}
	}).observe(document, {
		childList: true,
		subtree: true
	});
	function getFetchOpts(link) {
		const fetchOpts = {};
		if (link.integrity) fetchOpts.integrity = link.integrity;
		if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
		if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
		else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
		else fetchOpts.credentials = "same-origin";
		return fetchOpts;
	}
	function processPreload(link) {
		if (link.ep) return;
		link.ep = true;
		const fetchOpts = getFetchOpts(link);
		fetch(link.href, fetchOpts);
	}
})();
//#endregion
//#region packages/runtime/dist/internal.mjs
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && {}.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) this.notify();
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			this.notify();
		} else this.notify();
	}
	registerLoader(boundaryId, loader) {
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
var globalRegistry = /* @__PURE__ */ new Map();
var currentInstance = new I18nStore();
function getActiveInstance() {
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function registerLoader(boundaryId, loader) {
	if (!globalRegistry.has(boundaryId)) globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {}
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	const message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) {
		if (mgr) {
			instance.registerLoader(mgr.id, mgr.loader);
			return \`\`;
		}
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, ...restParams } = effectiveParams;
	return interpolate(message, restParams);
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) registerLoader(boundaryId, loader);
		if (config.locale) await store.setLocale(config.locale);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
//#region \\0vite/preload-helper.js
var scriptRel = "modulepreload";
var assetsURL = function(dep) {
	return "/" + dep;
};
var seen = {};
var __vitePreload = function preload(baseModule, deps, importerUrl) {
	let promise = Promise.resolve();
	if (deps && deps.length > 0) {
		const links = document.getElementsByTagName("link");
		const cspNonceMeta = document.querySelector("meta[property=csp-nonce]");
		const cspNonce = cspNonceMeta?.nonce || cspNonceMeta?.getAttribute("nonce");
		function allSettled(promises) {
			return Promise.all(promises.map((p) => Promise.resolve(p).then((value) => ({
				status: "fulfilled",
				value
			}), (reason) => ({
				status: "rejected",
				reason
			}))));
		}
		promise = allSettled(deps.map((dep) => {
			dep = assetsURL(dep, importerUrl);
			if (dep in seen) return;
			seen[dep] = true;
			const isCss = dep.endsWith(".css");
			const cssSelector = isCss ? "[rel=\\"stylesheet\\"]" : "";
			if (!!importerUrl) for (let i = links.length - 1; i >= 0; i--) {
				const link = links[i];
				if (link.href === dep && (!isCss || link.rel === "stylesheet")) return;
			}
			else if (document.querySelector(\`link[href="\${dep}"]\${cssSelector}\`)) return;
			const link = document.createElement("link");
			link.rel = isCss ? "stylesheet" : scriptRel;
			if (!isCss) link.as = "script";
			link.crossOrigin = "";
			link.href = dep;
			if (cspNonce) link.setAttribute("nonce", cspNonce);
			document.head.appendChild(link);
			if (isCss) return new Promise((res, rej) => {
				link.addEventListener("load", res);
				link.addEventListener("error", () => rej(/* @__PURE__ */ new Error(\`Unable to preload CSS for \${dep}\`)));
			});
		}));
	}
	function handlePreloadError(err) {
		const e = new Event("vite:preloadError", { cancelable: true });
		e.payload = err;
		window.dispatchEvent(e);
		if (!e.defaultPrevented) throw err;
	}
	return promise.then((res) => {
		for (const item of res || []) {
			if (item.status !== "rejected") continue;
			handlePreloadError(item.reason);
		}
		return baseModule().catch(handlePreloadError);
	});
};
//#endregion
//#region \\0virtual:zintl/manager/none/entry:b_ae1e7cbb2f74
var entry_b_ae1e7cbb2f74_default = {
	id: "b_ae1e7cbb2f74",
	loader: (locale) => {
		switch (locale) {
			case "en": return {
				"b_ae1e7cbb2f74": {
					"90929241": "Compiler-driven internationalization for the modern web.",
					"072b66c8": "Zintl I18n"
				},
				"b_f05b8e5701f3": { "ba23519a": (params) => {
					const { counter } = params;
					return \`\${(() => {
						if (params["counter"] == 0) return \`Start Counting Now!\`;
						if (params["counter"] == 2) return \`Count is Two\`;
						if (new Intl.PluralRules("en").select(params["counter"]) === "one") return \`Count is One.\`;
						return \`Count is \${params["counter"]}\`;
					})()}\`;
				} }
			};
			case "ar": return __vitePreload(() => import("./entry_b_ae1e7cbb2f74-BNWsTriX.js").then((m) => m.default), []);
			case "es": return __vitePreload(() => import("./entry_b_ae1e7cbb2f74-gfFkWwHV.js").then((m) => m.default), []);
			default: return {};
		}
	}
};
//#endregion
//#region examples/website/src/assets/typescript.svg
var typescript_default = "data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20aria-hidden='true'%20width='32'%20height='32'%20viewBox='0%200%20256%20256'%3e%3cpath%20fill='%23007ACC'%20d='M0%20128v128h256V0H0z'/%3e%3cpath%20fill='%23FFF'%20d='m56.612%20128.85l-.081%2010.483h33.32v94.68h23.568v-94.68h33.321v-10.28c0-5.69-.122-10.444-.284-10.566c-.122-.162-20.4-.244-44.983-.203l-44.74.122l-.121%2010.443Zm149.955-10.742c6.501%201.625%2011.459%204.51%2016.01%209.224c2.357%202.52%205.851%207.111%206.136%208.208c.08.325-11.053%207.802-17.798%2011.988c-.244.162-1.22-.894-2.317-2.52c-3.291-4.795-6.745-6.867-12.028-7.233c-7.76-.528-12.759%203.535-12.718%2010.321c0%201.992.284%203.17%201.097%204.795c1.707%203.536%204.876%205.649%2014.832%209.956c18.326%207.883%2026.168%2013.084%2031.045%2020.48c5.445%208.249%206.664%2021.415%202.966%2031.208c-4.063%2010.646-14.14%2017.879-28.323%2020.276c-4.388.772-14.79.65-19.504-.203c-10.28-1.828-20.033-6.908-26.047-13.572c-2.357-2.6-6.949-9.387-6.664-9.874c.122-.163%201.178-.813%202.356-1.504c1.138-.65%205.446-3.129%209.509-5.485l7.355-4.267l1.544%202.276c2.154%203.29%206.867%207.801%209.712%209.305c8.167%204.307%2019.383%203.698%2024.909-1.26c2.357-2.153%203.332-4.388%203.332-7.68c0-2.966-.366-4.266-1.91-6.501c-1.99-2.845-6.054-5.242-17.595-10.24c-13.206-5.69-18.895-9.224-24.096-14.832c-3.007-3.25-5.852-8.452-7.03-12.8c-.975-3.617-1.22-12.678-.447-16.335c2.723-12.76%2012.353-21.659%2026.25-24.3c4.51-.853%2014.994-.528%2019.424.569Z'/%3e%3c/svg%3e";
//#endregion
//#region examples/website/src/assets/vite.svg
var vite_default = "/assets/vite-BF8QNONU.svg";
//#endregion
//#region examples/website/src/assets/hero.png
var hero_default = "/assets/hero-5sT3BiRD.png";
//#endregion
//#region examples/website/src/counter.ts
function setupCounter(element) {
	let counter = 0;
	const setCounter = (count) => {
		counter = count;
		element.innerHTML = _t("ba23519a", { counter }, {
			_mgr: entry_b_ae1e7cbb2f74_default,
			_bId: "b_f05b8e5701f3"
		});
	};
	element.addEventListener("click", () => setCounter(counter + 1));
	setCounter(0);
}
//#endregion
//#region examples/website/src/main.ts
async function render() {
	await loadI18nInstance({
		locale: new URLSearchParams(window.location.search).get("lang") || "en",
		loaders: { ["b_ae1e7cbb2f74"]: entry_b_ae1e7cbb2f74_default.loader }
	});
	const app = document.querySelector("#app");
	app.innerHTML = \`
    <div>
      <a href="https://vite.dev" target="_blank">
        <img src="\${vite_default}" class="logo" alt="Vite logo" />
      </a>
      <a href="https://www.typescriptlang.org/" target="_blank">
        <img src="\${typescript_default}" class="logo vanilla" alt="TypeScript logo" />
      </a>
      <div class="hero-container">
        <img src="\${hero_default}" class="hero-image" alt="Zintl Hero" />
        <!-- @zintl-note This is a note for the compiler -->
        <h1 class="hero-title">\${_t("072b66c8", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</h1>
        <p class="hero-subtitle">\${_t("90929241", {
		_mgr: entry_b_ae1e7cbb2f74_default,
		_bId: "b_ae1e7cbb2f74"
	})}</p>
      </div>

      <div class="card">
        <button id="counter" type="button"></button>
      </div>

      <div class="language-switcher">
        <!-- @zintl-ignore -->
        <button id="set-ar">العربية</button>
        <!-- @zintl-ignore -->
        <button id="set-en">English</button>
        <!-- @zintl-ignore -->
        <button id="set-es">Español</button>
      </div>

    </div>
  \`;
	setupCounter(document.querySelector("#counter"));
	document.querySelector("#set-en")?.addEventListener("click", async () => {
		history.pushState({}, "", "?lang=en");
		await render();
	});
	document.querySelector("#set-ar")?.addEventListener("click", async () => {
		window.history.pushState({}, "", \`?lang=ar\`);
		await render();
	});
	document.querySelector("#set-es")?.addEventListener("click", async () => {
		window.history.pushState({}, "", \`?lang=es\`);
		await render();
	});
}
await render();
//#endregion
"
`;

exports[`Example Proof: website > should match Final Production Build (dist) snapshots > website/dist/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Website</title>
    <script type="module" crossorigin src="/assets/index-cP7leHyS.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-PpzFsM6_.css">
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        const l = params.get("lang") || "en" || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"موقع الويب"}};
        const originals = {
          title: document.title,
        };
        const preloads = {"ar":["assets/entry_b_ae1e7cbb2f74-BNWsTriX.js"],"es":["assets/entry_b_ae1e7cbb2f74-gfFkWwHV.js"]};
        function preload(locale) {
          const urls = preloads[locale] || [];
          for (const url of urls) {
            const link = document.createElement("link");
            link.rel = "modulepreload";
            link.href = url;
            document.head.appendChild(link);
          }
        }
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
          preload(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
  </body>
</html>
"
`;

exports[`Example Proof: website > should match Production snapshots (Baking) > website/prod-transforms/index.html 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Website</title>
  <!--zintl-bootstrap-->
    <script id="zintl-projection">
      (function() {
        const params = new URLSearchParams(window.location.search);
        const l = params.get("lang") || "en" || localStorage.getItem('zintl-locale') || 'en';
        const rtl = ["ar"];
        const deltas = {"ar":{"title":"موقع الويب"}};
        const originals = {
          title: document.title,
        };
        function apply(locale) {
          if (document.documentElement.lang === locale) return;
          document.documentElement.dir = rtl.includes(locale) ? 'rtl' : 'ltr';
          document.documentElement.lang = locale;
          const hasText = v => typeof v === "string" && v.trim();
          const delta = deltas[locale];
          if (delta) {
            document.title = hasText(delta.title)
              ? delta.title
              : originals.title;
          } else {
            document.title = originals.title;
          }
        }
        window.__zintlApplyHtml = apply;
        if (l !== 'en') {
          apply(l);
        }
      })();
    </script>
  </head>
  <body>
    <div id="app"></div>
    <script type="module" src="/src/main.ts"></script>
  </body>
</html>"
`;

exports[`Example Proof: website > should match Production snapshots (Baking) > website/prod-transforms/src/counter.ts 1`] = `
"import { _t } from "zintl/internal";
import _zintl_mgr_b_ae1e7cbb2f74 from "virtual:zintl/manager/none/entry:b_ae1e7cbb2f74";


export function setupCounter(element: HTMLButtonElement) {
  let counter = 0;
  const setCounter = (count: number) => {
    counter = count;
    // @zintl-note This is a note for the compiler
    element.innerHTML = _t("ba23519a", { counter }, { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_f05b8e5701f3" });
  };
  element.addEventListener("click", () => setCounter(counter + 1));
  setCounter(0);
}"
`;

exports[`Example Proof: website > should match Production snapshots (Baking) > website/prod-transforms/src/main.ts 1`] = `
"import { _t, loadI18nInstance } from "zintl/internal";
import _zintl_mgr_b_ae1e7cbb2f74 from "virtual:zintl/manager/none/entry:b_ae1e7cbb2f74";
import "./style.css";
import typescriptLogo from "./assets/typescript.svg";
import viteLogo from "./assets/vite.svg";
import heroImg from "./assets/hero.png";

import { setupCounter } from "./counter";

// export function setupCounter(element: HTMLButtonElement) {
//   let counter = 0;
//   const setCounter = (count: number) => {
//     counter = count;
//     element.innerHTML = t(
//       "{counter, plural, zero {Start Counting Now!} one {Count is One.} two {Count is Two} other {Count is #}}",
//       { counter },
//     );
//   };
//   element.addEventListener("click", () => setCounter(counter + 1));
//   setCounter(0);
// }

async function render() {
  const params = new URLSearchParams(window.location.search);

  // zintlizing to search params lang, default to "en", hence no baking allowed for this flow.
  await loadI18nInstance({ locale: params.get("lang") || "en", loaders: { ["b_ae1e7cbb2f74"]: _zintl_mgr_b_ae1e7cbb2f74.loader } });

  const app = document.querySelector<HTMLDivElement>("#app")!;
  app.innerHTML = \`
    <div>
      <a href="https://vite.dev" target="_blank">
        <img src="\${viteLogo}" class="logo" alt="Vite logo" />
      </a>
      <a href="https://www.typescriptlang.org/" target="_blank">
        <img src="\${typescriptLogo}" class="logo vanilla" alt="TypeScript logo" />
      </a>
      <div class="hero-container">
        <img src="\${heroImg}" class="hero-image" alt="Zintl Hero" />
        <!-- @zintl-note This is a note for the compiler -->
        <h1 class="hero-title">\${_t("072b66c8", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</h1>
        <p class="hero-subtitle">\${_t("90929241", { _mgr: _zintl_mgr_b_ae1e7cbb2f74, _bId: "b_ae1e7cbb2f74" })}</p>
      </div>

      <div class="card">
        <button id="counter" type="button"></button>
      </div>

      <div class="language-switcher">
        <!-- @zintl-ignore -->
        <button id="set-ar">العربية</button>
        <!-- @zintl-ignore -->
        <button id="set-en">English</button>
        <!-- @zintl-ignore -->
        <button id="set-es">Español</button>
      </div>

    </div>
  \`;

  setupCounter(document.querySelector<HTMLButtonElement>("#counter")!);

  // 2. Logic to toggle language using the unified API
  document.querySelector("#set-en")?.addEventListener("click", async () => {
    history.pushState({}, "", "?lang=en");
    await render();
  });
  document.querySelector("#set-ar")?.addEventListener("click", async () => {
    window.history.pushState({}, "", \`?lang=ar\`);
    await render();
  });
  document.querySelector("#set-es")?.addEventListener("click", async () => {
    window.history.pushState({}, "", \`?lang=es\`);
    await render();
  });
}

// Initial render
await render();"
`;

exports[`Example Proof: website > should match Production snapshots (Baking) > website/prod-transforms/virtual:zintl/content/ar/entry:b_ae1e7cbb2f74 1`] = `
"export default {
    "b_ae1e7cbb2f74": {
      "90929241": "التدويل الموجه بالمعالجة للويب الحديث.",
      "072b66c8": "تدويل زينتل",
    },
    "b_f05b8e5701f3": {
      "ba23519a": (params) => {
    const { counter } = params;
    return \`\${(() => {
      const rule = new Intl.PluralRules('ar').select(params['counter']);
      if (rule === 'zero') return \`ابدا العد الان\`;
      if (rule === 'one') return \`العد وصل لواحد\`;
      if (rule === 'two') return \`العد وصل لاثنان\`;
      return \`العد وصل لـ \${params['counter']}\`;
    })()}\`;
  },
    },
  };"
`;

exports[`Example Proof: website > should match Production snapshots (Baking) > website/prod-transforms/virtual:zintl/content/es/entry:b_ae1e7cbb2f74 1`] = `
"export default {
    "b_ae1e7cbb2f74": {
      "90929241": "La internacionalización impulsada por el compilador para la web moderna.",
      "072b66c8": "¡Zintl I18n",
    },
    "b_f05b8e5701f3": {
      "ba23519a": (params) => {
    const { counter } = params;
    return \`\${(() => {
      if (params['counter'] == 0) return \`Empieza a contar ahora!\`;
      const rule = new Intl.PluralRules('es').select(params['counter']);
      if (rule === 'one') return \`El contador es uno.\`;
      if (rule === 'two') return \`El contador es dos.\`;
      return \`El contador es \${params['counter']}\`;
    })()}\`;
  },
    },
  };"
`;

exports[`Example Proof: website > should match Production snapshots (Baking) > website/prod-transforms/virtual:zintl/manager/none/entry:b_ae1e7cbb2f74 1`] = `
"export default { id: "b_ae1e7cbb2f74", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_ae1e7cbb2f74": {
      "90929241": "Compiler-driven internationalization for the modern web.",
      "072b66c8": "Zintl I18n",
    },
    "b_f05b8e5701f3": {
      "ba23519a": (params) => {
    const { counter } = params;
    return \`\${(() => {
      if (params['counter'] == 0) return \`Start Counting Now!\`;
      if (params['counter'] == 2) return \`Count is Two\`;
      const rule = new Intl.PluralRules('en').select(params['counter']);
      if (rule === 'one') return \`Count is One.\`;
      return \`Count is \${params['counter']}\`;
    })()}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_ae1e7cbb2f74").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_ae1e7cbb2f74").then(m => m.default);
        default: return {};
      }
    } };"
`;
